# aurras

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTICE  README.md  deploy.sh  register_event_source.sh  register_event_source_polkadot.sh
.github/: pull_request_template.md
.github/workflows/: coverage.yaml  rust.yml
actions/balance-filter/: Cargo.toml  deploy.sh
actions/balance-notification-registration/: Cargo.toml  deploy.sh
actions/common/: Cargo.toml
actions/eth-event-processor/: Cargo.toml  deploy.sh
actions/event-producer/: deploy.sh  event-producer.py
actions/event-registration/: Cargo.toml  deploy.sh
actions/event-registration/src/: lib.rs
actions/event-registration/src/types/: mod.rs  source.rs
actions/user-login/: Cargo.toml  deploy.sh
actions/user-login/src/: lib.rs
actions/user-login/src/types/: user.rs
actions/user_registartation/: Cargo.toml
actions/user_registartation/src/: lib.rs
actions/workflow_registration/: Cargo.toml  deploy.sh
actions/workflow_registration/src/: lib.rs
actions/workflow_registration/src/types/: user.rs
docs/: configuration.md  integration-testing-for-payout-notify.md  integration-testing.md
primitives/: Cargo.toml
runtime/: Cargo.toml  workflow.wasm
runtime/lite/: Cargo.toml  Readme.md
runtime/lite/examples/: basic-producer.rs
runtime/lite/modules/: Cargo.toml
runtime/lite/modules/kuska_ssb_client/: Cargo.toml
runtime/lite/modules/kuska_ssb_client/src/: lib.rs
runtime/lite/modules/kuska_ssb_client/src/client/: client.rs  mod.rs  response_parser.rs  tests.rs  types.rs
runtime/lite/modules/logger/: Cargo.toml
runtime/lite/modules/logger/src/: lib.rs  logger.rs  tests.rs  traits.rs
runtime/lite/modules/state-managed-workflow/: Cargo.toml
runtime/lite/modules/state-managed-workflow/src/: common.rs  lib.rs  macros.rs  state_manager.rs  traits.rs  types.rs
runtime/lite/modules/state_manager/: Cargo.toml
runtime/lite/modules/state_manager/src/: lib.rs  traits.rs  types.rs
runtime/lite/modules/storage/: Cargo.toml  README.md
runtime/lite/modules/storage/src/: lib.rs  storage.rs  test.rs  traits.rs
runtime/lite/modules/wasm/: Cargo.toml
runtime/lite/modules/wasm/src/: help.rs  lib.rs
runtime/lite/modules/wasmtime-wasi-module/: Cargo.toml
runtime/lite/modules/wasmtime-wasi-module/src/: help.rs  lib.rs  tests.rs  types.rs
runtime/lite/modules/workflow-wasm/: Cargo.toml
runtime/lite/modules/workflow-wasm/src/: lib.rs  test.rs  workflow.rs
runtime/lite/scripts/: Dockerfile  README.md  config  docker-compose.yml  pub-config  ssb-up.sh
runtime/lite/src/: consumer.rs  context.rs  lib.rs  publisher.rs
runtime/lite/src/modules/: mod.rs
runtime/lite/src/modules/common/: mod.rs
runtime/lite/src/modules/kuska_ssb_client/client/: client.rs  errors.rs  mod.rs  response_parser.rs  tests.rs  types.rs
runtime/lite/src/modules/logger/: logger.rs  mod.rs  tests.rs  traits.rs
runtime/lite/src/modules/state_manager/: mod.rs  tests.rs  traits.rs  types.rs
runtime/lite/src/modules/storage/: mod.rs  storage.rs  test.rs  traits.rs
runtime/lite/src/modules/wasmtime_wasi_module/: help.rs  mod.rs  tests.rs  types.rs
runtime/openwhisk/: Cargo.toml
runtime/openwhisk/src/: lib.rs  wasi_http.rs
scripts/: accept_params.sh  build_action.sh  build_js_action.sh  build_rust_action.sh  check_dependencies.sh  util.sh
workflow/: Dockerfile  README.md
workflow/composer-v2/: Cargo.toml  readme.md
workflow/composer-v2/composer-boilerplate/: Cargo.toml
workflow/composer-v2/composer-boilerplate/src/: common.rs  lib.rs  macros.rs  traits.rs  types.rs
workflow/composer-v2/composer_primitives/: Cargo.toml
workflow/composer-v2/composer_primitives/src/: constant.rs  lib.rs
workflow/composer-v2/composer_primitives/src/types/: build_directory.rs  mod.rs  output_directory.rs  result.rs  source_files.rs
workflow/composer-v2/config/: combine_operation_example.echo  emp_polka.echo  employee_salary.echo  mock_car_market_place.echo  mock_emp_salary_map_conact.echo  payout_notification.echo  polkadot_payout.echo
workflow/composer-v2/echo-library/: Cargo.toml
workflow/composer-v2/echo-library/src/: lib.rs
workflow/composer-v2/echo-library/src/common/: composer.rs  mod.rs  parse_module.rs  starlark_modules.rs
workflow/composer-v2/echo-library/src/tests/: mod.rs
workflow/composer-v2/echo-library/src/types/: input.rs  mod.rs  rust_types.rs  task.rs  workflow.rs
workflow/composer-v2/example/: main.echo
workflow/composer-v2/src/: cli.rs  lib.rs  main.rs
workflow/composer-v2/src/commands/: build.rs  create.rs  mod.rs  validate.rs
workflow/composer-v2/src/errors/: io.rs  mod.rs
workflow/composer-v2/src/types/: build_directory.rs  context.rs  echo.rs  mod.rs  output_directory.rs  parser.rs  result.rs  source_files.rs
workflow/hello_world_macro/: Cargo.toml
workflow/hello_world_macro/src/: lib.rs
workflow/openwhisk_macro/: Cargo.toml  readme.md
workflow/openwhisk_macro/src/: lib.rs
workflow/polkadot_macro/: Cargo.toml  readme.md
workflow/polkadot_macro/src/: impl_api_tarits.rs  impl_imports.rs  lib.rs  staking_payout.rs  transfer.rs
workflow/test_util/: Cargo.toml
workflow/test_util/src/: helper.rs  lib.rs  main.rs  types.rs  wasi_http.rs
workflow/workflow_apis/: Cargo.toml  Dockerfile  README.md
workflow/workflow_apis/migrations/2023-01-06-054841_login/: down.sql  up.sql
workflow/workflow_apis/migrations/2023-02-08-064717_latest/: down.sql  up.sql
workflow/workflow_apis/src/: main.rs  schema.rs  test.rs
workflow/workflow_apis/src/config/: crypto.rs  mod.rs
workflow/workflow_apis/src/db/: mod.rs  openwhisk_db.rs  user.rs
workflow/workflow_apis/src/handler/: auth.rs  mod.rs  openwhisk_action.rs  openwhisk_rule_trigger.rs  user.rs
workflow/workflow_apis/src/html/: index.html
workflow/workflow_apis/src/models/: mod.rs  openwhisk_model.rs  user.rs
workflow/workflow_apis/src/tests/: handler_test.rs  helper.rs  mod.rs  openwhisk_test.rs  test.rs
workflow/workflow_macro/: Cargo.toml  readme.md
workflow/workflow_macro/src/: lib.rs
(+193 files in other folders)
