[workspace]
members = [
    "actions/common",
    "actions/event-registration",
    "actions/balance-notification-registration",
    "actions/balance-filter",
    "actions/push-notification",
    "actions/event-receiver",
    "actions/substrate-event-processor",
    "actions/user_registration",
    "workflow/openwhisk_macro",
    "workflow/workflow_macro",
    "workflow/polkadot_macro",
    # "workflow/composer-v2",
    "primitives",
    "workflow/workflow_apis",
    "workflow/test_util"
]

[workspace.package]
authors = ["The HugoByte Team <hello@hugobyte.com>"]
edition = "2021"
repository = "https://github.com/hugobyte/aurras.git"
version = "0.0.1"