[package]
name = "action-user-login"
version = "0.1.0"
authors = ["HugoByte <hello@hugobyte.com>"]
repository = "https://github.com/hugobyte/aurras"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chesterfield = "0.0.1"
actions-common = { git = "https://github.com/hugobyte/aurras", rev = '1f7e117' }
reqwest = { version = "0.11", features = ["blocking", "json"] }
bcrypt = "0.13.0"
jsonwebtoken = "7.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actions-common = { git = "https://github.com/hugobyte/aurras", rev = '1f7e117', features = ["mock_containers"] }
tokio = { version = "1.0.0", features = ["macros"] }