[[bin]]
name = 'consumer'
path = 'src/consumer.rs'

[package]
name = 'runtime'
authors = ['The HugoByte Team <hello@hugobyte.com>']
edition = '2021'
repository = 'https://github.com/hugobyte/aurras.git'
version = '0.0.1'

[lib]
path = 'src/lib.rs'

[dependencies]
kuska-sodiumoxide = '0.2.5-0'
base64 = '0.11.0'
log = '0.4.8'
dirs = '2.0'
subxt-signer = '0.34.0'
slog = '2.7.0'
slog-async = '2.8.0'
slog-term = '2.9.1'
wasmtime = '0.35.0'
anyhow = '1.0.80'
wasmtime-wasi = '0.35.0'
wasi-common = '0.35.0'
serde_derive = '1.0.81'
http = '0.2'
bytes = '1'
wasi-experimental-http-wasmtime = '0.10.0'
sha256 = '1.5.0'
rocksdb = '0.18.0'
dotenv = '0.15.0'

[dependencies.kuska-ssb]
git = 'https://github.com/shanithkk/ssb.git'
branch = 'fix-invite-accept-issue'

[dependencies.kuska-handshake]
git = 'https://github.com/Kuska-ssb/handshake.git'
features = ['async_std']

[dependencies.async-std]
version = '1.12.0'
features = [
    'unstable',
    'attributes',
]

[dependencies.serde]
version = '1.0.104'
features = ['derive']

[dependencies.serde_json]
version = '1.0.48'
features = [
    'preserve_order',
    'arbitrary_precision',
]

[dependencies.tokio]
version = '1.36.0'
features = [
    'macros',
    'time',
    'rt-multi-thread',
]

[dependencies.test_util]
path = '../../workflow/test_util'

[dev-dependencies]
subxt = '0.34.0'
