[package]
name = "composer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "composer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.137", optional = true, features = ["derive"] }
thiserror = "1.0"
tempfile = "3.2.0"
itertools = "0.10.5"
walkdir = "2"
starlark = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
bumpalo = "3.11.1"
anyhow = "1.0.65"
echo_library = { path =  "./echo-library"}
composer_primitives ={ path = "./composer_primitives"}

[dependencies.aurras-primitives]
path = "../../primitives"

[dependencies.clap]
version = "3.2"
features = [ "derive", "env" ]