[package]
name = "openwhisk_macro"
version = "0.1.6"
edition = "2018"
authors = ["HugoByte <hello@hugobyte.com>"]
repository = "https://github.com/HugoByte/aurras/workflow/openwhisk_macro"
license = "Apache-2.0"
description = "Derive Macro for OpenWhisk Rust Client"
documentation = "https://docs.rs/openwhisk_macro/latest"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.95",features = ["extra-traits"]}
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serde_derive = "1.0.81"
serde_yaml = "0.8.24"
openwhisk-rust = "0.1.2"
http = "0.2.8"
wasi-experimental-http = "0.10.0"
bytes = "1"