[package]
name = "substrate_macro"
version = "0.1.1"
edition = "2021"
authors = ["HugoByte <hello@hugobyte.com>"]
repository = "https://github.com/HugoByte/aurras/workflow/polkadot_macro"
license = "Apache-2.0"
description = "Derive Macro for Substrate Actions"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
syn = {version="1.0.95",features = ["extra-traits"]}
quote = "1.0.18"
