#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "test_util"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.49"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "1.0.81"
anyhow = "1.0.56"
wasmtime = "0.36.0"
wasmtime-wasi = "0.36.0"
wasi-common = "0.36.0"
bytes = "1"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", default-features = true, features = [
    "json",
    "blocking",
] }
thiserror = "1.0"
tokio = { version = "1.4.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.2.1"
openssl = { version = "0.10", features = ["vendored"] }
openwhisk-client-rust = { git = "https://github.com/HugoByte/openwhisk-client-rust.git", branch = "master" }
wiremock = "0.5.17"
async-std = { version = "1.12.0", features = ["attributes"] }
workflow_macro = "0.0.3"
dyn-clone = "1.0.7"