[package]
name = "workflow_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4"
actix-web = "4.2.1"
uuid = { version = "0.8.2", features = ["v4","serde"] }
actix_extract_multipart = "1.2.0"
openwhisk-rust = "0.1.5"
base64 = "0.20.0"
serde_json = "1.0"
reqwest = "0.11.11"
tracing = "0.1.37"
tracing-futures="0.2.5"
tracing-log = {version= "0.1", features = ["env_logger"]}
tracing-subscriber = "0.2.25"
dotenv ="0.15.0"
serde = {version = "1.0", features = ["derive"]}
eyre ="0.6.8"
color-eyre ="0.6.2"
config = "0.10"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4"
chrono = { version = "0.4", features = ["serde"] }
validator ="0.10"
validator_derive ="0.10"
jsonwebtoken = "7.1"
futures = {version ="0.3", features =["compat"]}
bcrypt = "0.13.0"
actix-web-httpauth = "0.8.0"
lazy_static = "1.3.0"