[package]
name = "echo_library"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
starlark = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.107"
allocative = "0.3.0"
thiserror = "1.0.50"
convert_case = "0.6.0"
clap = { version = "4.4.10", features = ["derive"] }
clap_builder = "4.4.11"
itertools = "0.10.5"
walkdir = "2"
composer_primitives = {path = "../composer_primitives"}
