[package]
name = "storage"
authors = ["The HugoByte Team <hello@hugobyte.com>"]
edition = "2021"
repository = "https://github.com/hugobyte/aurras.git"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.18.0"
rmp-serde = "1.1.2"
anyhow = "1.0.81"

