[package]
name = "wasm"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.36.0"
anyhow = "1.0.80"
wasmtime-wasi = "0.36.0"
wasi-common = "0.36.0"
wiremock = "0.5.17"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "1.0.81"
async-std = { version = "1.12.0", features = ["attributes"] }
wasi-experimental-http = "0.10.0"
http = "0.2"
bytes = "1"