[package]
name = "wasm"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.35.0"
anyhow = "1.0.80"
wiremock = "0.5.17"
wasmtime-wasi = "0.35.0"
wasi-common = "0.35.0"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "1.0.81"
async-std = { version = "1.12.0", features = ["attributes"] }
http = "0.2"
bytes = "1"
wasi-experimental-http-wasmtime = "0.10.0"