[package]
name = "wasm_module"
authors = ["The HugoByte Team <hello@hugobyte.com>"]
edition = "2021"
repository = "https://github.com/hugobyte/aurras.git"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.35.0"
anyhow = "1.0.80"
wiremock = "0.5.17"
wasmtime-wasi = "0.35.0"
wasi-common = "0.35.0"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "1.0.81"
async-std = { version = "1.12.0", features = ["attributes"] }
http = "0.2"
bytes = "1"
wasi-experimental-http-wasmtime = "0.10.0"
sha256 = "1.5.0"
test_util = { path = "../../../../workflow/test_util" }
state_manager = { path="../state_manager" }
rocksdb = "0.18.0"
logger = {path= "../logger"}